special jvm options to do class unloading